Escape dollar signs

--- a/carprices.ipynb
+++ b/carprices.ipynb
@@ -681,7 +681,7 @@
    "id": "unable-plane",
    "metadata": {},
    "source": [
-    "### Price distribution under $100k"
+    "### Price distribution under \\\\$100k"
    ]
   },
   {
