Fix formatting for github

--- a/carprices.ipynb
+++ b/carprices.ipynb
@@ -296,7 +296,7 @@
    "id": "palestinian-shade",
    "metadata": {},
    "source": [
-    "Motivation: Find price based on other attributes \\\n",
+    "Motivation: Find price based on other attributes  \n",
     "ML type: regression"
    ]
   },
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "reliable-execution",
+   "id": "small-rapid",
    "metadata": {},
    "outputs": [
     {
@@ -707,18 +707,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "discrete-glossary",
-   "metadata": {},
-   "source": [
-    "- 99% of cars have price under \\$60k"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "unable-plane",
    "metadata": {},
    "source": [
-    "### Price distribution under \\$100k"
+    "### Price distribution under $100k"
    ]
   },
   {
@@ -758,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cordless-weapon",
+   "id": "parliamentary-latvia",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "rapid-sellers",
+   "id": "unique-linux",
    "metadata": {},
    "outputs": [
     {
@@ -869,13 +861,13 @@
    "source": [
     "sns.FacetGrid(cars_under_100_over_0, height=6).map(sns.kdeplot, \"price\").add_legend()\n",
     "plt.title('Price density distribution')\n",
-    "plt.show();"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "liberal-luxury",
+   "id": "textile-williams",
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southwest-labor",
+   "id": "promising-blood",
    "metadata": {},
    "source": [
     "As we saw before, there are some records that mess up with the price distribution"
@@ -1295,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "circular-leave",
+   "id": "logical-madness",
    "metadata": {},
    "outputs": [
     {
@@ -1327,10 +1319,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "genuine-mitchell",
+   "id": "straight-louisiana",
    "metadata": {},
    "source": [
-    "The majority of cars (99%) have price under \\$60k"
+    "The majority of cars (99%) have price under $60k"
    ]
   }
  ],
