--- a/carprices.ipynb
+++ b/carprices.ipynb
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "exposed-bubble",
+   "id": "continent-preserve",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
    "id": "unable-plane",
    "metadata": {},
    "source": [
-    "### Price distribution under $100k"
+    "### Price distribution under &#0036;100k"
    ]
   },
   {
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "catholic-address",
+   "id": "shared-knitting",
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "entertaining-climate",
+   "id": "received-empire",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "divided-restriction",
+   "id": "mental-popularity",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deadly-contractor",
+   "id": "fuzzy-duplicate",
    "metadata": {},
    "source": [
     "As we saw before, there are some records that mess up with the price distribution"
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "vanilla-ferry",
+   "id": "narrow-pleasure",
    "metadata": {},
    "outputs": [
     {
@@ -1287,10 +1287,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sexual-circular",
+   "id": "preliminary-prevention",
    "metadata": {},
    "source": [
-    "The majority of cars (99%) have price under $60k"
+    "The majority of cars (99%) have price under &#0036;60k"
    ]
   }
  ],
