--- a/classification.ipynb
+++ b/classification.ipynb
@@ -65,7 +65,7 @@
    "id": "excited-handy",
    "metadata": {},
    "source": [
-    "The KNN algorithm assumes that similar things exist in close proximity. In other words, similar things are near to each other."
+    "The KNN algorithm assumes that similar things exist in close proximity."
    ]
   },
   {
@@ -73,17 +73,7 @@
    "id": "mysterious-pattern",
    "metadata": {},
    "source": [
-    "The KNN Algorithm\n",
-    "1. Load the data\n",
-    "2. Initialize K to your chosen number of neighbors\n",
-    "3. For each example in the data:\n",
-    "- Calculate the distance between the query example and the current example from the data.\n",
-    "- Add the distance and the index of the example to an ordered collection\n",
-    "4. Sort the ordered collection of distances and indices from smallest to largest (in ascending order) by the distances\n",
-    "5. Pick the first K entries from the sorted collection\n",
-    "6. Get the labels of the selected K entries\n",
-    "7. If regression, return the mean of the K labels\n",
-    "8. If classification, return the mode of the K labels"
+    "The KNN Algorithm finds the distances betweend the given point and all the data, selects K number of neighbors closest and selects the most frequent label."
    ]
   },
   {
@@ -290,10 +280,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convenient-cheese",
+   "id": "connected-dancing",
    "metadata": {},
    "source": [
-    "A decision tree is a flowchart-like structure in which each internal node represents a test on a feature (e.g. whether a coin flip comes up heads or tails) , each leaf node represents a class label (decision taken after computing all features) and branches represent conjunctions of features that lead to those class labels."
+    "Decision tree is composed of nodes (test on a feature - an attribute), branches (conjunctions of features - a decision) and leafs (class label - outcome). "
    ]
   },
   {
@@ -310,6 +300,14 @@
    "metadata": {},
    "source": [
     "![Rain forecast tree](https://miro.medium.com/max/2400/0*PB7MYQfzyaLaTp1n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "entertaining-syndicate",
+   "metadata": {},
+   "source": [
+    "Decision tree layer the process, and at each layer data is split into groups so it falls into similiar buckets."
    ]
   },
   {
@@ -817,7 +815,7 @@
    "id": "aerial-chemical",
    "metadata": {},
    "source": [
-    "Logistic regression is a classification algorithm. It is used to predict a binary outcome based on a set of independent variables."
+    "Logistic regression is a classification algorithm. It is used to predict a binary outcome based on a set of independent variables - it predicts an outcome based on variables. Used for example to detect whether email is spam or not."
    ]
   },
   {
@@ -1025,6 +1023,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "presidential-creativity",
+   "metadata": {},
+   "source": [
+    "This algorithm is called naive, because it assumes that features are uncorrelated which usually is not true in the real life."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "turkish-booking",
+   "metadata": {},
+   "source": [
+    "It is based on Bayes theorem:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "clear-vacation",
+   "metadata": {},
+   "source": [
+    "$ P(A | B) = \\frac{P(B | A) * P(A) }{P(B)} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "timely-constraint",
+   "metadata": {},
+   "source": [
+    "The result is the probability of the class occuring given the new data - calculates the probability of a class given a set of feature values "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "stupid-reasoning",
+   "metadata": {},
+   "source": [
+    "$ P(class | features) = \\frac{P(features | class) * P(class) }{P(features)} $"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "marked-buffalo",
@@ -1174,6 +1212,28 @@
    "metadata": {},
    "source": [
     "### Linear Discriminant Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "accomplished-creativity",
+   "metadata": {},
+   "source": [
+    "LDA is commonly used as a dimension reduction technique. It helps to reduce high-dimensional datasets onto a lower-dimensional space."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "passing-newton",
+   "metadata": {},
+   "source": [
+    "LDA makes predictions by estimating the probability that a new set of inputs belongs to each class. The class that gets the highest probability is the output class and a prediction is made.\n",
+    "\n",
+    "LDA makes some simplifying assumptions about data:\n",
+    "- each variable is is shaped like a bell curve when plotted.\n",
+    "- each attribute has the same variance, that values of each variable vary around the mean by the same amount on average.\n",
+    "\n",
+    "With these assumptions, the LDA model estimates the mean and variance from your data for each class."
    ]
   },
   {
@@ -1329,6 +1389,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "skilled-unknown",
+   "metadata": {},
+   "source": [
+    "SVM finds the largest decision boundary, that separates different classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "worst-offering",
+   "metadata": {},
+   "source": [
+    "It needs to find the optimal line while correctly classifying classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "printable-maria",
+   "metadata": {},
+   "source": [
+    "![SVM](https://miro.medium.com/max/1686/1*Ox4UFUKHna9BjW5gfNcQlw.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "id": "proved-victory",
@@ -1478,6 +1562,30 @@
    "metadata": {},
    "source": [
     "### Multi Layer Perceptron"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "forced-layout",
+   "metadata": {},
+   "source": [
+    "Perceptron is a single layer neural network and a multi-layer perceptron is called Neural Networks.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "arranged-henry",
+   "metadata": {},
+   "source": [
+    "![SVM](https://miro.medium.com/max/1002/1*ztXU57QEETPHGXczHrSWSA.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "inappropriate-steps",
+   "metadata": {},
+   "source": [
+    "All the inputs x are multiplied with their weights w. All the multiplied values are added together and called Weighted Sum. Apply that weighted sum to the correct Activation Function - activation functions are used to map the input between the required values."
    ]
   },
   {
